# shunting_vehicle

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
shunting_vehicle_description/: CMakeLists.txt  package.xml
shunting_vehicle_description/config/: shunting_vehicle_control.yaml
shunting_vehicle_description/launch/: shunting_vehicle_control.launch  visualize_in_rviz.launch
shunting_vehicle_description/meshes/lidars/: SICK_TIM571.dae
shunting_vehicle_description/meshes/shunting_vehicle/: E2_Achse_sw.dae  E2_Achse_ws.dae  E2_Body.dae  E2_Kupplung_Basis.dae  body_green5.dae  body_white.dae  wheel_black.dae  wheel_white.dae
shunting_vehicle_description/rviz_config/: urdf_visu.rviz
shunting_vehicle_description/urdf/: shunting_vehicle.urdf  shunting_vehicle_LMS111.urdf  shunting_vehicle_TIM571.urdf
shunting_vehicle_simulation/: CMakeLists.txt  package.xml
shunting_vehicle_simulation/launch/: gazebo_empty.launch  level_crossing.launch  main.launch  spawn_shunting_vehicle.launch  spawn_urdf.launch
shunting_vehicle_simulation/worlds/: level_crossing.world
