<?xml version="1.0"?>
<package format="2">
  <name>shunting_vehicle_description</name>
  <version>1.0.0</version>
  <description>The shunting_vehicle_description package</description>
  <url type="github">https://github.com/pawelir/shunting_vehicle</url>

  <author email="pawel.irzyk6@gmail.com">Paweł Irzyk</author>
  <maintainer email="pawel.irzyk6@gmail.com">Paweł Irzyk</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>


</package>